--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=xxxxx;port=3306;database=cjoli;user=xxxx;password=xxxxx"
+  },
   "AllowedHosts": "*"
 }
