Jwt authentication done

--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=xxxxx;port=3306;database=cjoli;user=xxxx;password=xxxxx"
   },
+  "Jwt": {
+    "Issuer": "https://cjoli.com",
+    "Audience": "https://cjoli.com",
+    "Key": "xxxxxxx"
+  },
   "AllowedHosts": "*"
 }
