--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -10,8 +10,8 @@
   },
   "Jwt": {
     "Issuer": "https://cjoli.com",
-    "Audience": "https://cjoli.com",
-    "Key": "xxxxxxx"
+    "Audience": "https://cjoli.com"
   },
+  "JwtKey": "xxxxxxx",
   "AllowedHosts": "*"
 }
