--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
