--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.3",
     "chartjs-adapter-moment": "^1.0.1",
     "dotenv": "^16.4.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -24,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
     "react-use-websocket": "^4.8.1",
     "universal-cookie": "^7.1.4"
