--- a/cjoli.client/.env
+++ b/cjoli.client/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://cjoli.azurewebsites.net
-VITE_API_WS=wss://cjoli.azurewebsites.net
+VITE_API_URL=https://cjoliserver.azurewebsites.net
+VITE_API_WS=wss://cjoliserver.azurewebsites.net
