--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.1",
     "react-use-websocket": "^4.8.1",
     "universal-cookie": "^7.1.4"
   },
