--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /cjoli.Server_Tests/bin
 /cjoli.Server_Tests/obj
 /cjoli.client/coverage
+/cjoli.Server/Properties/PublishProfiles/CJoli - Zip Deploy.pubxml.user
+/cjoli.Server/Properties/PublishProfiles/CJoli - Zip Deploy.pubxml.user
