--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -16,9 +16,11 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.59.15",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chartjs-adapter-moment": "^1.0.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
@@ -32,7 +34,7 @@
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.1",
-    "react-use-websocket": "^4.8.1",
+    "react-use-websocket": "^4.10.0",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
