--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.1",
     "react-use-websocket": "^4.10.0",
     "universal-cookie": "^7.1.4"
@@ -43,6 +44,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
