--- a/cjoli.client/.env
+++ b/cjoli.client/.env
@@ -1,2 +1,4 @@
 VITE_API_URL=https://cjoliserver.azurewebsites.net
 VITE_API_WS=wss://cjoliserver.azurewebsites.net
+VITE_DATADOG_TOKEN=
+VITE_DATADOG_HOST=
