--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -13,6 +13,7 @@
     "test-ui": "vitest --ui"
   },
   "dependencies": {
+    "@datadog/browser-logs": "^5.30.0",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
