--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -25,6 +25,8 @@ env:
   DOTNET_VERSION: '8.0'                 # set this to the .NET Core version to use
 
 on:
+  pull_request:
+    branches: [ "develop" ]
   push:
     branches: [ "main" ]
   workflow_dispatch:
@@ -72,6 +74,7 @@ jobs:
       contents: none
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name != 'pull_request'    
     environment:
       name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
