--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -54,6 +54,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest-websocket-mock": "^2.5.0",
     "jsdom": "^24.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
