--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -23,6 +23,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "eslint-config-airbnb": "^19.0.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "moment": "^2.30.1",
@@ -53,6 +54,7 @@
     "@vitest/coverage-istanbul": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest-websocket-mock": "^2.5.0",
