--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vitest run && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest --coverage",
@@ -23,7 +23,6 @@
     "chartjs-adapter-moment": "^1.0.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "eslint-config-airbnb": "^19.0.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "moment": "^2.30.1",
@@ -54,11 +53,14 @@
     "@vitest/coverage-istanbul": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest-websocket-mock": "^2.5.0",
     "jsdom": "^24.1.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0"
