--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -15,5 +15,6 @@
   "JwtKey": "xxxxxxx",
   "OpenAIKey": "xxxxxx",
   "DatadogKey": "xxxxxxx",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Source": "prod",
 }
