--- a/cjoli.client.common/package.json
+++ b/cjoli.client.common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cjoli/core",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "main": "dist/core.js",
   "types": "dist/main.d.ts",
@@ -18,7 +18,16 @@
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
+    "react-i18next": "^15.4.0",
+    "react-router-dom": "^7.1.5",
+    "react-use-websocket": "^4.12.0",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -36,5 +45,6 @@
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
     "vite-plugin-dts": "^4.5.0"
-  }
+  },
+  "dependencies": {}
 }
