--- a/cjoli.client.heroui/package.json
+++ b/cjoli.client.heroui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cjoli.client.heroui",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,24 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroui/button": "2.2.9",
-    "@heroui/code": "2.2.6",
-    "@heroui/dropdown": "2.3.9",
-    "@heroui/input": "2.4.9",
-    "@heroui/kbd": "2.2.6",
-    "@heroui/link": "2.2.7",
-    "@heroui/navbar": "2.2.8",
-    "@heroui/snippet": "2.2.10",
-    "@heroui/switch": "2.2.8",
-    "@heroui/system": "2.4.6",
-    "@heroui/theme": "2.4.5",
+    "@cjoli/core": "^1.0.1",
+    "@heroui/react": "^2.6.14",
+    "@iconify/react": "^5.2.0",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-types/shared": "3.26.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.23.0",
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
+    "react-router-dom": "7.1.5",
+    "sonner": "^1.7.4",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16"
   },
