--- a/cjoli.client.heroui/package.json
+++ b/cjoli.client.heroui/package.json
@@ -15,6 +15,7 @@
     "@iconify/react": "^5.2.0",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-types/shared": "3.26.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "2.1.1",
@@ -26,8 +27,10 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "7.1.5",
     "react-use-websocket": "^4.13.0",
+    "redux-logger": "^3.0.6",
     "sonner": "^1.7.4",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16",
@@ -38,6 +41,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/redux-logger": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "@vitejs/plugin-react": "^4.2.1",
