--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=xxxxx;port=3306;database=cjoli;user=xxxx;password=xxxxx"
+    "DefaultConnection": "server=xxxxx;port=3306;database=cjoli;user=xxxx;password=xxxxx",
+    "AzureStorage": "xxxxxxxx"
   },
   "Jwt": {
     "Issuer": "https://cjoli.com",
@@ -16,5 +17,9 @@
   "OpenAIKey": "xxxxxx",
   "DatadogKey": "xxxxxxx",
   "AllowedHosts": "*",
-  "Source": "prod"
+  "Source": "prod",
+  "Twilio": {
+    "AccountSid": "xxxxxx",
+    "AuthToken": "xxxxxx"
+  }
 }
