change config twilio

--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -18,8 +18,6 @@
   "DatadogKey": "xxxxxxx",
   "AllowedHosts": "*",
   "Source": "prod",
-  "Twilio": {
-    "AccountSid": "xxxxxx",
-    "AuthToken": "xxxxxx"
-  }
+  "TwilioAccountSid": "xxxxxx",
+  "TwilioAuthToken": "xxxxxx"
 }
