--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -19,5 +19,6 @@
   "AllowedHosts": "*",
   "Source": "prod",
   "TwilioAccountSid": "xxxxxx",
-  "TwilioAuthToken": "xxxxxx"
+  "TwilioAuthToken": "xxxxxx",
+  "TwilioNotifContentSid": "HXb85143eafeb4c35082aa7e722d670204"
 }
