--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -20,5 +20,6 @@
   "Source": "prod",
   "TwilioAccountSid": "xxxxxx",
   "TwilioAuthToken": "xxxxxx",
-  "TwilioNotifContentSid": "HXb85143eafeb4c35082aa7e722d670204"
+  "TwilioNotifContentSid": "HXb85143eafeb4c35082aa7e722d670204",
+  "TwilioNotifWhatsapp": "+15177366871"
 }
