--- a/cjoli.client/package.json
+++ b/cjoli.client/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-loadable": "^5.5.11",
     "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -72,6 +73,7 @@
     "prettier": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vitest": "^1.6.0"
   }
 }
