--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -92,6 +92,12 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+      - name: Clean blob storage
+        uses: azure/CLI@v1
+        with:
+            inlineScript: |
+                az storage blob delete-batch --account-name cjolifront --auth-mode key -s '$web' --connection-string '${{secrets.AZURE_STORAGE_CNX}}'
           
       - name: Upload to blob storage
         uses: azure/CLI@v1
