--- a/cjoli.client.mobile/package.json
+++ b/cjoli.client.mobile/package.json
@@ -19,7 +19,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@tamagui/config": "^1.126.3",
+    "@tamagui/config": "^1.126.4",
+    "@tamagui/lucide-icons": "^1.126.4",
+    "@tamagui/toast": "^1.126.4",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -42,13 +44,14 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tamagui": "^1.126.3"
+    "tamagui": "^1.126.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "burnt": "^0.13.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
