--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /cjoli.Server/Properties/PublishProfiles/CJoli - Zip Deploy.pubxml.user
 /cjoli.Server/Properties/PublishProfiles/CJoli - Zip Deploy.pubxml.user
 */node_modules/
+*/.yarn/*
+/test/expo-router/.yarn/*
+/test/expo-router/node_modules/*
