--- a/cjoli.client.mobile/package.json
+++ b/cjoli.client.mobile/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "build": "eas build --platform android --profile development"
+    "build": "eas build --platform android --profile development",
+    "doctor": "npx expo-doctor"
   },
   "jest": {
     "preset": "jest-expo"
@@ -57,5 +58,15 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false,
+        "exclude": [
+          "tamagui"
+        ]
+      }
+    }
+  }
 }
