--- a/cjoli.client.mobile/package.json
+++ b/cjoli.client.mobile/package.json
@@ -19,10 +19,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.6",
     "@tamagui/config": "^1.126.4",
     "@tamagui/lucide-icons": "^1.126.4",
     "@tamagui/toast": "^1.126.4",
+    "@tanstack/react-query": "^5.74.11",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
