--- a/cjoli.client.mobile/package.json
+++ b/cjoli.client.mobile/package.json
@@ -11,6 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build": "eas build --platform android --profile development",
+    "prod": "eas build --platform android",
     "doctor": "npx expo-doctor"
   },
   "jest": {
@@ -19,13 +20,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.0.14",
     "@tamagui/config": "^1.126.4",
     "@tamagui/lucide-icons": "^1.126.4",
     "@tamagui/toast": "^1.126.4",
     "@tanstack/react-query": "^5.74.11",
+    "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
