--- a/cjoli.client.mobile/package.json
+++ b/cjoli.client.mobile/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.1",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --go",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -18,12 +18,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@cjoli/core": "file:../cjoli.client.core",
+    "@cjoli/core": "^1.0.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.0.14",
+    "@rnx-kit/metro-config": "^2.0.1",
+    "@rnx-kit/metro-resolver-symlinks": "^0.2.1",
     "@tamagui/config": "^1.126.4",
     "@tamagui/lucide-icons": "^1.126.4",
     "@tamagui/toast": "^1.126.4",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native/metro-config": "^0.79.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
