--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 */node_modules/
 /test/expo-router/.yarn/*
 /test/expo-router/node_modules/*
+/cjoli.client.common/dist/*
+/cjoli.client.core/dist/*
