--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -21,5 +21,7 @@
   "TwilioAccountSid": "xxxxxx",
   "TwilioAuthToken": "xxxxxx",
   "TwilioNotifContentSid": "HXb85143eafeb4c35082aa7e722d670204",
-  "TwilioNotifWhatsapp": "+15177366871"
+  "TwilioNotifWhatsapp": "+15177366871",
+  "FirebaseApiKey": "xxxxxx",
+  "FirebaseProject": "xxxxx"
 }
