--- a/cjoli.client.mobile/tsconfig.json
+++ b/cjoli.client.mobile/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@@/*": ["../cjoli.client.common/src/*"]
+      "@@/*": ["./lib/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
