--- a/cjoli.client.core/package.json
+++ b/cjoli.client.core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cjoli/core",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "type": "module",
   "main": "dist/core.js",
   "types": "dist/main.d.ts",
@@ -16,38 +16,36 @@
     "preview": "vite preview",
     "prepublishOnly": "npm run build"
   },
-  "peerDependencies": {
-    "@tanstack/react-query": "^5.66.0",
-    "axios": "^1.7.9",
-    "dayjs": "^1.11.13",
-    "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-http-backend": "^3.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.5.1",
-    "react-use-websocket": "^4.12.0",
-    "universal-cookie": "^7.2.2"
-  },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
     "vite-plugin-dts": "^4.5.0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
+    "react-use-websocket": "^4.12.0",
+    "universal-cookie": "^7.2.2",
     "@reduxjs/toolkit": "^2.7.0",
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
