--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-#      - name: Test with the dotnet CLI
-#        run: dotnet test -c Release        
+      - name: Test with the dotnet CLI
+        run: dotnet test -c Release        
 
       - name: dotnet publish
         run: dotnet publish -c Release --property:PublishDir=${{env.DOTNET_ROOT}}/myapp
