--- a/cjoli.Server/cjoli.Server.csproj
+++ b/cjoli.Server/cjoli.Server.csproj
@@ -14,6 +14,13 @@
     <None Include="Properties\PublishProfiles\CJoli - Zip Deploy.pubxml.user" />
   </ItemGroup>
 
+  <!--ItemGroup>
+    <ProjectReference Include="..\cjoli.client\cjoli.client.esproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+  </ItemGroup-->
+
+
   <ItemGroup>
     <ProjectReference Include="..\cjoli.client.heroui\cjoli.client.heroui.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
