cancellatio token middleware

--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -2,12 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=xxxxx;port=3306;database=cjoli;user=xxxx;password=xxxxx",
     "AzureStorage": "xxxxxxxx"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "xxxxxxxxx"
   },
   "Jwt": {
     "Issuer": "https://cjoli.com",
