--- a/cjoli.Server/appsettings.json
+++ b/cjoli.Server/appsettings.json
@@ -27,5 +27,7 @@
   "TwilioNotifContentSid": "HXb85143eafeb4c35082aa7e722d670204",
   "TwilioNotifWhatsapp": "+15177366871",
   "FirebaseApiKey": "xxxxxx",
-  "FirebaseProject": "xxxxx"
+  "FirebaseProject": "xxxxx",
+  "StripeApiKey": "xxxxx",
+  "StripeWebhookSecret": "xxxxxxx"
 }
